# entomoidUI

./: EntomoidUI.sln
EntomoidUI/: CMakeLists.txt  EntomoidUI.vcxproj  EntomoidUI.vcxproj.filters  Settings.hpp  UiBase.hpp  Utils.hpp  WinUi.cpp  WinUi.hpp  WinUtils.cpp  WinUtils.hpp  gen_builder.bat  gen_builder.sh  interface.hpp  main.cpp
EntomoidUI/catch/: CMakeLists.txt
EntomoidUI/demo/: CMakeLists.txt  main.cpp
EntomoidUI/src/: CMakeLists.txt  Settings.hpp  UiBase.hpp  Utils.hpp  WinUtils.cpp  WinUtils.hpp  interface.hpp
EntomoidUI/src/android/: AndUi.cpp  AndUtils.cpp
EntomoidUI/src/nix/: LinUI.cpp  LinUI.hpp  LinUtils.hpp
EntomoidUI/src/win/: WinUi.cpp  WinUi.hpp  WinUtils.cpp  WinUtils.hpp
EntomoidUI/test/: CMakeLists.txt  UtilTests.cpp  main.cpp
